implementing DTOs and mappers