@@ -3,14 +3,16 @@ package receite.me.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+import receite.me.dto.PastaDto;
 import receite.me.dto.ResponseDto;
+import receite.me.mapper.PastaMapper;
+import receite.me.mapper.ReceitaMapper;
 import receite.me.model.Pasta;
-import receite.me.model.Receita;
 import receite.me.service.PastaService;
 import receite.me.service.ReceitaService;
 import receite.me.service.UsuarioService;
 
-import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("pastas")
@@ -19,10 +21,14 @@ public class PastaController {
     private final PastaService pastaService;
     private final ReceitaService receitaService;
     private final UsuarioService usuarioService;
+    private final PastaMapper pastaMapper;
+    private final ReceitaMapper receitaMapper;
+
     @GetMapping("/list/{id}")
     public ResponseEntity<?> listPastas(){
         return ResponseEntity.ok(pastaService.list());
     }
+
     @GetMapping("/{idPasta}")
     public ResponseEntity<?> getPasta(@PathVariable("idPasta") Long idPasta){
         try{
@@ -31,26 +37,29 @@ public class PastaController {
             return ResponseEntity.badRequest().body(e.getMessage());
         }
     }
+
     @GetMapping("/list-usuario/{idUsuario}")
     public ResponseEntity<?> getPastasOfUser(@PathVariable("idUsuario") Long idUsuario){
-        List<Pasta> pastas = pastaService.list()
-                .stream()
-                .filter(pasta -> pasta.getUsuario().getId().equals(idUsuario))
-                .toList();
-        return ResponseEntity.ok(pastas);
+        return ResponseEntity.ok(pastaService.list().stream()
+                .filter(pasta -> pasta.getUsuarioId().equals(idUsuario))
+                .collect(Collectors.toList()));
     }
+
     @GetMapping("/favoritos/{idUsuario}")
     public ResponseEntity<?> getFavoritos(@PathVariable("idUsuario") Long idUsuario){
         return ResponseEntity.ok(pastaService.findPastaFavoritaByUsuario(idUsuario).getReceitas());
     }
+
     @PostMapping("/{idReceita}/{idUsuario}")
     public ResponseEntity<?> alterarFavorito(@PathVariable("idReceita") Long idReceita, @PathVariable("idUsuario") Long idUsuario){
         try{
             var body = true;
-            var pasta = pastaService.findPastaFavoritaByUsuario(idUsuario);
-            var receita = receitaService.findById(idReceita);
-            if(pasta.getReceitas().contains(receita)){
-                pasta.getReceitas().remove(receita);
+            PastaDto pastaDto = pastaService.findPastaFavoritaByUsuario(idUsuario);
+            Pasta pasta = pastaMapper.toEntity(pastaDto);
+            var receita = receitaMapper.toEntity(receitaService.findById(idReceita));
+
+            if(pasta.getReceitas().stream().anyMatch(r -> r.getId().equals(idReceita))){
+                pasta.getReceitas().removeIf(r -> r.getId().equals(idReceita));
                 body = false;
             }else {
                 pasta.getReceitas().add(receita);
@@ -63,11 +72,11 @@ public class PastaController {
     }
 
     @PostMapping("/create/{idUsuario}")
-    public ResponseEntity<?> createPasta(@PathVariable("idUsuario") Long idUsuario, @RequestBody Pasta pasta){
+    public ResponseEntity<?> createPasta(@PathVariable("idUsuario") Long idUsuario, @RequestBody PastaDto pastaDto){
         try{
-            pasta.setUsuario(usuarioService.findById(idUsuario).get());
-            pasta.setFlagFavorito(false);
-            return ResponseEntity.ok(pastaService.createPasta(pasta));
+            pastaDto.setUsuarioId(idUsuario);
+            pastaDto.setFlagFavorito(false);
+            return ResponseEntity.ok(pastaService.createPasta(pastaMapper.toEntity(pastaDto)));
         }catch (Exception e){
             return ResponseEntity.badRequest().body(e.getMessage());
         }
@@ -85,8 +94,8 @@ public class PastaController {
     @PostMapping("/add-receita/{idPasta}/{idReceita}")
     public ResponseEntity<?> addReceitaById(@PathVariable("idPasta") Long idPasta, @PathVariable("idReceita") Long idReceita){
         try{
-            var pasta = pastaService.findById(idPasta);
-            var receita = receitaService.findById(idReceita);
+            Pasta pasta = pastaMapper.toEntity(pastaService.findById(idPasta));
+            var receita = receitaMapper.toEntity(receitaService.findById(idReceita));
             pasta.getReceitas().add(receita);
             pastaService.updatePasta(pasta);
             return ResponseEntity.ok().build();
